Fix image overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,13 +4,13 @@
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
 // Set Widths
-.home .block, .journal .block, .post-header, .post-content, .site-footer .footer-nav, .site-footer .legal { width: 24em; margin: 0 auto; }
+.home .block, .journal .block, .post-header, .post, .site-footer .footer-nav, .site-footer .legal { width: 24em; margin: 0 auto; }
 
 // Figures
 .post figure { margin-bottom: 2em;
     &.full-width { position: relative; width: 100vw; left: calc(-50vw + 50%); }
     &.large-center { width: 100%; }
-    &.quarter-left { position: relative; width: 40vw; max-width: 35em; left: calc(-45vw + 50%); float: left; margin-right: calc(-45vw + 55%); padding-top: 0.5em; margin-bottom: 0; }
+    &.quarter-left { position: relative; width: 40vw; left: calc(-45vw + 50%); float: left; margin-right: calc(-45vw + 55%); padding-top: 0.5em; margin-bottom: 0; }
     figcaption { font-size: $small-font-size; padding-top: 1em; }
 }
 
@@ -104,9 +104,13 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { m
 @media screen and (min-width: $is-medium) {
     // Set Widths
     .home .block, .journal .block, .post-header, .site-footer .footer-nav, .site-footer .legal { width: 50em; margin: 0 auto; }
-    .post-content { width: 43em; margin: 0 auto; }
+    .page-content { overflow: hidden; }
+    .post { width: 43em; margin: 0 auto; word-break: break-word; }
     // Figures
-        .post figure.large-center { position: relative; width: 75vw; left: calc(-35vw + 50%); }
+    .post figure.large-center { position: relative; width: 75vw; left: calc(-37.5vw + 50%); text-align: center; }
+    .post figure {
+        &.quarter-left { }
+    }
     
     // Site Header
     .site-header { background: none; padding: 0; 
